# yahoo-finance-rs

./: Cargo.toml  build.rs
src/: bar.rs  error.rs  history.rs  lib.rs  streaming.rs
src/yahoo/: chart.rs  mod.rs
